menubar using flex

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ ul li{
     display: block;
     margin-left: 70px;
     margin-top:-50px;
+    text-transform: capitalize;
 }
 .w-2 ul {
     display:block;
